@@ -167,8 +167,8 @@ class StackConfig:
         libqtile.config.Group("d")
     ]
     layouts = [
-        layout.Stack(stacks=2),
-        layout.Stack(stacks=1),
+        layout.Stack(num_stacks=2),
+        layout.Stack(num_stacks=1),
     ]
     floating_layout = libqtile.layout.floating.Floating()
     keys = []
@@ -599,13 +599,13 @@ class SliceConfig:
     ]
     layouts = [
         layout.Slice(side='left', width=200, wname='slice',
-            fallback=layout.Stack(stacks=1, border_width=0)),
+            fallback=layout.Stack(num_stacks=1, border_width=0)),
         layout.Slice(side='right', width=200, wname='slice',
-            fallback=layout.Stack(stacks=1, border_width=0)),
+            fallback=layout.Stack(num_stacks=1, border_width=0)),
         layout.Slice(side='top', width=200, wname='slice',
-            fallback=layout.Stack(stacks=1, border_width=0)),
+            fallback=layout.Stack(num_stacks=1, border_width=0)),
         layout.Slice(side='bottom', width=200, wname='slice',
-            fallback=layout.Stack(stacks=1, border_width=0)),
+            fallback=layout.Stack(num_stacks=1, border_width=0)),
         ]
     floating_layout = libqtile.layout.floating.Floating()
     keys = []
